basicservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-dotnetangular-svc
  namespace: dotnetangular
spec:
  ports:
  - port: 80
    protocol: TCP
    name: my-http-port
  type: NodePort
  selector:
    app: dotnetangular
